# C_Morpion

./: CMakeLists.txt  Morpion.cbp  Morpion.depend  Morpion.layout  README.md  board.c  board_view_text.c  player_manager_mock.c  test.txt
etape1/: Doxyfile  Morpion.depend  board.c  board.c.save  game.c  main_test
etape1/html/: board_8c__incl.map  board_8c_source.html  board_8h__dep__incl.map  board_8h__incl.md5  board_8h_source.html  board__view_8h__dep__incl.map  board__view_8h__dep__incl.md5  board__view_8h__incl.map  board__view_8h_source.html  board__view__text_8c.html  board__view__text_8c__incl.map  board__view__text_8c__incl.md5  board__view__text_8c_source.html  files.html  game_8c__incl.map  game_8c__incl.md5  game_8c_a182e35027dfd61633b04ace81efa51dc_icgraph.map  (+12 more)
etape2/: player_manager_scanf.c
etape3/: Morpion.cbp  Morpion.layout  board_view.h  board_view_sdl.c  board_view_text.c  player_manager_sdl.c
html/: board_8h.html  board_8h__dep__incl.md5  board__view_8h.html  game_8c.html  game_8c_source.html  game_8h__dep__incl.md5  game_8h_a2886c1ccce89458ac3e60950e3a6feaa_icgraph.map  globals_enum.html  main_8c__incl.map  main_8c_a840291bc02cba5474a4cb46a9b9566fe_cgraph.md5  menudata.js  player__manager_8h.html  player__manager__mock_8c__incl.map  player__manager__mock_8c__incl.md5  tictactoe__errors_8h__dep__incl.map
latex/: board_8h__dep__incl.md5  board__view_8h_source.tex  board__view__text_8c__incl.md5  player__manager_8h.tex  player__manager__mock_8c__incl.md5  tictactoe__errors_8c.tex  tictactoe__errors_8h.tex  tictactoe__errors_8h__dep__incl.md5
(+77 files in other folders)
